almost finished with the edit. Tags need to be fixed for the add method.